--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ ul.task-list li input[type="checkbox"] {
       <div class="about-contents"><main class="content" id="quarto-document-content">
 
 <p>I am a student at State University of New York at Geneseo.</p>
-<p>I am interested in …</p>
-<p>I enjoy …</p>
+<p>I am interested in running</p>
+<p>I enjoy cooking, Netflix, and football</p>
 <section id="education" class="level2">
 <h2 data-anchor-id="education">Education</h2>
 <p><strong>State University of New York at Geneseo</strong>, 2023<br> - B.A. in Economics<br> - Minor in Data Analytics</p>
