--- a/blog-listing.html
+++ b/blog-listing.html
@@ -115,33 +115,6 @@ ul.task-list li input[type="checkbox"] {
 </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
-  <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-data-visualization" role="button" data-bs-toggle="dropdown" aria-expanded="false" rel="" target="">
- <span class="menu-text">Data Visualization</span>
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-data-visualization">    
-        <li>
-    <a class="dropdown-item" href="./ClassDANL0918.qmd" rel="" target="">
- <span class="dropdown-text">Lecture 1</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="./ClassDANL1002.qmd" rel="" target="">
- <span class="dropdown-text">Lecture 2</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="./ClassDANL1016.qmd" rel="" target="">
- <span class="dropdown-text">Lecture 3</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="./ClassDANL1127.qmd" rel="" target="">
- <span class="dropdown-text">Lecture 4</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="./ClassDANLHW1.qmd" rel="" target="">
- <span class="dropdown-text">Homework1</span></a>
-  </li>  
-    </ul>
-  </li>
   <li class="nav-item">
     <a class="nav-link active" href="./blog-listing.html" rel="" target="" aria-current="page">
  <span class="menu-text">Blog</span></a>
@@ -247,7 +220,7 @@ Nicholas Andrews
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="beer,code,data-analysis" data-listing-date-sort="1698897600000" data-listing-file-modified-sort="1701119917284" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="1" data-categories="beer,code,data-analysis" data-listing-date-sort="1702789200000" data-listing-file-modified-sort="1703000409563" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/nba_best_players/nba_best_players.html"> <img src="./posts/nba_best_players/nba_best_players.png" class="thumbnail-image"> </a></p>
 </div>
@@ -264,7 +237,7 @@ NBA Best Lineup
 <div class="metadata">
 <a href="./posts/nba_best_players/nba_best_players.html">
 <div class="listing-date">
-Nov 2, 2023
+Dec 17, 2023
 </div>
 <div class="listing-author">
 Nicholas Andrews
@@ -389,7 +362,7 @@ YOUR NAME
 </div>
 <div class="quarto-post image-right" data-index="6" data-categories="news" data-listing-date-sort="1698379200000" data-listing-file-modified-sort="1699306502206" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
 <div class="thumbnail">
-<p><a href="./danl-website-template/posts/welcome/index.html"> <!-- img(9CEB782EFEE6)[progressive=false, height=]:danl-website-template/posts/welcome/index.html --> </a></p>
+<p><a href="./danl-website-template/posts/welcome/index.html"> <p class="card-img-top"><img src="danl-website-template\posts\welcome\thumbnail.jpg"  class="thumbnail-image card-img"/></p> </a></p>
 </div>
 <div class="body">
 <a href="./danl-website-template/posts/welcome/index.html">
@@ -417,7 +390,7 @@ YOUR NAME
 </div>
 <div class="quarto-post image-right" data-index="7" data-categories="news" data-listing-date-sort="1698379200000" data-listing-file-modified-sort="1699314386873" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
 <div class="thumbnail">
-<p><a href="./posts/welcome/index.html"> <!-- img(9CEB782EFEE6)[progressive=false, height=]:posts/welcome/index.html --> </a></p>
+<p><a href="./posts/welcome/index.html"> <p class="card-img-top"><img src="posts\welcome\thumbnail.jpg"  class="thumbnail-image card-img"/></p> </a></p>
 </div>
 <div class="body">
 <a href="./posts/welcome/index.html">
