--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Nicholas Andrews</title>
+<title>Nicholas Andrews - Nicky Andrews</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -103,53 +103,47 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     
 <!-- main -->
-<div class="quarto-about-trestles">
-  <div class="about-entity">
-    <img src="img/profile.png" class="about-image
-  round " style="height: 16em; width: 16em;">
-<header id="title-block-header" class="quarto-title-block default">
+<div class="quarto-about-jolla">
+  <img src="img/logo.png" class="about-image
+  round " style="height: 15em; width: 15em;">
+ <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Nicholas Andrews</h1>
+<h1 class="title">Nicky Andrews</h1>
 </div>
 <div class="quarto-title-meta">
   </div>
-</header>
-    <div class="about-links">
-  <a href="https://linkedin.com" class="about-link" rel="" target="">
-    <i class="bi bi-linkedin"></i>
-     <span class="about-link-text">LinkedIn</span>
-  </a>
-  <a href="https://instagram.com" class="about-link" rel="" target="">
-    <i class="bi bi-instagram"></i>
-     <span class="about-link-text">Instagram</span>
-  </a>
-  <a href="https://github.com" class="about-link" rel="" target="">
+</header><main class="content" id="quarto-document-content">
+<p>I am a student at State University of New York at Geneseo. As an Economics major I am interested in research. My favorite research sectors are the economics of policy development and the economics of sports. Although these two sectors interest me the most, any research that may cause actual change interests me. Outside of economics I am a college runner at the D3 level. I have seem great success through my ability to put forth a high amount of work ethic, time management, and communication skills with teammates.</p>
+<section id="education" class="level2">
+<h2 data-anchor-id="education">Education</h2>
+<p><strong>State University of New York at Geneseo</strong>, 2023<br> - B.A. in Economics<br> - Minor in Data Analytics</p>
+
+
+</section>
+</main> 
+  <hr class="about-sep">
+   <div class="about-links">
+  <a href="https://github.com/nicka5" class="about-link" rel="" target="">
     <i class="bi bi-github"></i>
      <span class="about-link-text">GitHub</span>
   </a>
-  <a href="https://GITHUB_USERNAME.github.io/resume-example.pdf" class="about-link" rel="" target="">
-    <i class="bi bi-file-earmark-pdf"></i>
-     <span class="about-link-text">Resumé</span>
+  <a href="https://www.linkedin.com/in/YOUR_LINKEDIN/" class="about-link" rel="" target="">
+    <i class="bi bi-linkedin"></i>
+     <span class="about-link-text">LinkedIn</span>
   </a>
-  <a href="mailto:YOUR_EMAIL@geneseo.edu" class="about-link" rel="" target="">
-    <i class="bi bi-mailbox"></i>
+  <a href="https://twitter.com/YOUR_SOCIAL_MEDIA" class="about-link" rel="" target="">
+    <i class="bi bi-twitter"></i>
+     <span class="about-link-text">Twitter</span>
+  </a>
+  <a href="mailto:nsa5@geneseo.edu" class="about-link" rel="" target="">
+    <i class="bi bi-envelope"></i>
      <span class="about-link-text">Email</span>
   </a>
+  <a href="https://YOUR_GITHUB.github.io/YOUR_RESUME.pdf" class="about-link" rel="" target="">
+    <i class="bi bi-file-pd"></i>
+     <span class="about-link-text">Résumé</span>
+  </a>
 </div>
-  </div>
-  <div class="about-contents"><main class="content" id="quarto-document-content">
-<p>Finley Malloc majors in Data Analytics at SUNY Geneseo. When not working on data analytics, Finley enjoys spending time unicycling and playing with her pet iguana.</p>
-<section id="education" class="level2">
-<h2 data-anchor-id="education">Education</h2>
-<p>State University of New York at Geneseo | Geneseo, NY <br> B.S. in Data Analytics | Aug 2022 - May 2026 <br> Minor in Business Administration</p>
-</section>
-<section id="experience" class="level2">
-<h2 data-anchor-id="experience">Experience</h2>
-<p>Starbucks Analytics | Data Analyst Intern | May 2024 - Aug 2024</p>
-
-
-</section>
-</main></div>
 </div>
  <!-- /main -->
 <script type="text/javascript" src="links.js"></script>
