--- a/index.html
+++ b/index.html
@@ -131,19 +131,15 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-github"></i>
      <span class="about-link-text">GitHub</span>
   </a>
-  <a href="https://www.linkedin.com/in/YOUR_LINKEDIN/" class="about-link" rel="" target="">
+  <a href="https://www.linkedin.com/in/nicky-andrews/" class="about-link" rel="" target="">
     <i class="bi bi-linkedin"></i>
      <span class="about-link-text">LinkedIn</span>
-  </a>
-  <a href="https://twitter.com/YOUR_SOCIAL_MEDIA" class="about-link" rel="" target="">
-    <i class="bi bi-twitter"></i>
-     <span class="about-link-text">Twitter</span>
   </a>
   <a href="mailto:nsa5@geneseo.edu" class="about-link" rel="" target="">
     <i class="bi bi-envelope"></i>
      <span class="about-link-text">Email</span>
   </a>
-  <a href="https://YOUR_GITHUB.github.io/YOUR_RESUME.pdf" class="about-link" rel="" target="">
+  <a href="https://nickya5.github.io/Nicholas Andrews Resume.pdf" class="about-link" rel="" target="">
     <i class="bi bi-file-pd"></i>
      <span class="about-link-text">Résumé</span>
   </a>
