--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-envelope"></i>
      <span class="about-link-text">Email</span>
   </a>
-  <a href="https://nickya5.github.io/Nicholas Andrews Resume.pdf" class="about-link" rel="" target="">
+  <a href="file:///C:/Users/nicka/OneDrive/Desktop/Job%20and%20Internship/Nicholas%20Andrews%20Resume.pdf" class="about-link" rel="" target="">
     <i class="bi bi-file-pd"></i>
      <span class="about-link-text">Résumé</span>
   </a>
