--- a/nba_best_players/nba_best_players_writeup.html
+++ b/nba_best_players/nba_best_players_writeup.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Nicky Andrews">
 <meta name="author" content=" ">
-<meta name="dcterms.date" content="2023-12-20">
+<meta name="dcterms.date" content="2023-12-24">
 
 <title>Nicholas Andrews - NBA Write Up</title>
 <style>
@@ -120,12 +120,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="../nba_best_players/nba_best_players.html" rel="" target="">
- <span class="menu-text">NBA Data</span></a>
-  </li>  
-  <li class="nav-item">
-    <a class="nav-link active" href="../nba_best_players/nba_best_players_writeup.html" rel="" target="" aria-current="page">
- <span class="menu-text">NBA Write-up</span></a>
+    <a class="nav-link" href="../welcome/index.html" rel="" target="">
+ <span class="menu-text">About Me</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="../blog-listing.html" rel="" target="">
@@ -182,7 +178,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">December 20, 2023</p>
+      <p class="date">December 24, 2023</p>
     </div>
   </div>
   
