--- a/index.html
+++ b/index.html
@@ -82,12 +82,8 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./nba_best_players/nba_best_players.html" rel="" target="">
- <span class="menu-text">NBA Data</span></a>
-  </li>  
-  <li class="nav-item">
-    <a class="nav-link" href="./nba_best_players/nba_best_players_writeup.html" rel="" target="">
- <span class="menu-text">NBA Write-up</span></a>
+    <a class="nav-link" href="./welcome/index.html" rel="" target="">
+ <span class="menu-text">About Me</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="./blog-listing.html" rel="" target="">
