--- a/blog-listing.html
+++ b/blog-listing.html
@@ -136,7 +136,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="data-analysis">data-analysis <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content column-page-left" id="quarto-document-content">
 
@@ -212,6 +212,34 @@ Nicholas Andrews
 </div>
 <div class="listing-reading-time">
 7 min
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="data-analysis" data-listing-date-sort="1702789200000" data-listing-file-modified-sort="1703446324730" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8">
+<div class="thumbnail">
+<p><a href="./posts/NBA Lineup interpretation/nba_best_players_writeup.html"> <img src="./posts/NBA Lineup interpretation/nba_best_players.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/NBA Lineup interpretation/nba_best_players_writeup.html">
+<h3 class="no-anchor listing-title">
+Best possible NBA lineup
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/NBA Lineup interpretation/nba_best_players_writeup.html">
+<div class="listing-date">
+Dec 17, 2023
+</div>
+<div class="listing-author">
+Nicholas Andrews
+</div>
+<div class="listing-reading-time">
+8 min
 </div>
 </a>
 </div>
